# langchain-course

./: 1_agents-under-hood.py  RAG_with_agentic_loop.py  Type-hints.py  ingestion.py  main.py  mediumblog1.txt  messages.py  practice-agent.py  practice.py  practice_pydan.py  pyproject.toml  react-search-project.py  retrieval.py  tavily-search.py
