[project]
name = "my-langchain-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=25.11.0",
    "isort>=6.1.0",
    "langchain>=0.3.28",
    "langchain-anthropic>=0.3.22",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.84",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.35",
    "langchain-pinecone>=0.2.12",
    "langchain-tavily>=0.2.11",
    "langchain-text-splitters>=0.3.11",
    "mypy>=1.19.1",
    "pinecone-client>=6.0.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "tavily-python>=0.7.23",
]
